test: mudanças no método